[project]
name = "markpub"
version = "2.0.0"
description = "Build (web publish) Markdown and Massive Wiki sites."
license = "MIT"
authors = [
  {name = "Bill Anderson", email = "band@acm.org"},
  {name = "Peter Kaminski", email = "kaminski@istori.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "jinja2>=3.1.6",
    "markpub-themes>=1.0.1",
    "markupsafe>=3.0.2",
    "mistletoe>=1.4.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "six>=1.17.0",
]

[project.optional-dependencies]
test = ["pytest>=8.4.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "markpub",
    "ruff>=0.14.2",
]

[project.urls]
homepage = "https://markpub.org"
repository = "https://github.com/MarkPub/markpub"

[project.scripts]
markpub = "markpub.markpub:main"

[tool.uv.sources]
markpub = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/markpub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"

exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    "__pypackages__",
    "build",
    "dist",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["E4","E7","E9","F","S"]
ignore = ["E401","E402"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101","S603"]
"src/markpub/markpub.py" = ["S324","S603","S607","S701"]
